# evoke

./: CHANGELOG.md  Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/client_server/: client.rs  server.rs
evocation/: Cargo.toml
evocation/src/: channel.rs  lib.rs  port.rs
evocation/src/tcp/: mod.rs
evocation/src/udp/: mod.rs
