[package]
name = "evocation"
version = "0.1.0"
edition = "2021"

[features]
tcp = ["tokio/net", "bytemuck/derive", "hashbrown", "tracing", "futures"]
udp = ["tokio/net", "bytemuck/derive", "hashbrown", "tracing", "futures", "flume"]

[dependencies]
alkahest = "0.1"
scoped-arena = "0.4"
pin-project-lite = "0.2"
hashbrown = { version = "0.12", optional = true }
tokio = { version = "1.0", optional = true }
tracing = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }
bytemuck = { version = "1.0", optional = true }
flume = { version = "0.10", optional = true }
